<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoContactFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imgBtnPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_profile_photo_round" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edTxtwName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="@color/placeholder"
                android:textSize="28sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/edTxtwPLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:hint="@string/p_last_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/placeholder"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edTxtwMLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:hint="@string/m_last_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/placeholder"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edTxtwAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/placeholder"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edTxtwPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:digits="1234567890#*+"
            android:textColorHint="@color/placeholder"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/txtVwGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="#555"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rdGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/rdBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/female"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/rdBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="20dp"
                android:text="@string/male"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.655" />
        </RadioGroup>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"

            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/container"
            tools:layout_editor_absoluteY="16dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnReturnToList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSaveContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="20dp"

                app:srcCompat="@android:drawable/ic_menu_save" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="#745896"

                android:src="@drawable/ic_delete_outline"
                tools:ignore="MissingConstraints" />
        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>